--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-infinite-scroll-hook": "^4.1.1",
-    "react-outside-click-handler": "^1.3.0",
     "react-spinners": "^0.13.8",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.3.3",
@@ -46,10 +45,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/formidable": "^3.4.2",
     "@types/lodash": "^4.14.198",
-    "@types/react-outside-click-handler": "^1.3.1",
     "@types/uuid": "^9.0.3",
+    "encoding": "^0.1.13",
     "prisma": "^5.2.0"
   }
 }
